--- a/render.yaml
+++ b/render.yaml
@@ -14,4 +14,4 @@ services:
       - key: HOST
         value: 0.0.0.0
       - key: RENDER_DATABASE_URL
-        sync: false # Will be set manually in Render dashboard
+        sync: false
